Fixed navbar horizontal overflow problem

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,8 +12,32 @@
 @font-face {font-family: ubuntuMonoBold; src: url(/fonts/UbuntuMono-B.ttf);}
 @font-face {font-family: ubuntuMonoBoldItalic; src: url(/fonts/UbuntuMono-BI.ttf);}
 
+body {
+	font-family: ubuntuRegular, Helvetica, Arial, sans-serif;
+	font-size: 22px;
+	background-color: #fff;
+	color: #333;
+	margin: 0px;
+	min-width: 873px;
+
+	/* disable text selection */
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.fixed_width {
+	width: 873px;
+}
+
 #navbar_wrapper {
+	min-width: 873px;
 	background-color: #333;
+	padding-left: 20px;
+	padding-right: 20px;
 	height: 70px;
 	box-shadow: 0px 0px 10px 3px #bbb;
 	border-bottom: 2px solid #000;
@@ -23,12 +47,8 @@
 	margin-left: auto;
 	margin-right: auto;
 	height: 50px;
-	padding: 10px;
+	padding: 10px 0px 10px 0px;
 	position: relative;
-}
-
-.fixed_width {
-	width: 873px;
 }
 
 #content {
@@ -53,14 +73,14 @@
 	position: absolute;
 	float: left;
 	top: 8px;
-	left: 10px;
+	left: 0px;
 	z-index: 2;
 }
 
 #logo_image {
 	position: absolute;
 	top: 12px;
-	left: 128px;
+	left: 118px;
 	width: 50px;
 	height: 50px; 
 	z-index: 1;
@@ -69,7 +89,7 @@
 #version_txt {
 	position: absolute;
 	top: 53px;
-	left: 13px;
+	left: 3px;
 	font-size: 12px;
 	z-index: 3;
 	color: #ccc;
@@ -90,23 +110,6 @@ a.logo:link, a.logo:visited {
 a.logo:hover, a.logo:active {
 	color: #fff;
 	text-decoration: none;
-}
-
-body {
-	font-family: ubuntuRegular, Helvetica, Arial, sans-serif;
-	font-size: 22px;
-	background-color: #fff;
-	color: #333;
-	margin: 0px;
-	width: 100%;
-
-	/* disable text selection */
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
 }
 
 h1 {
